Added HTML and images

--- a/index.html
+++ b/index.html
@@ -3,13 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Page</title>
+    <link rel="icon" href="img/Deadpoolsquare.jpeg" />
+    <title>Deadpool</title>
   </head>
   <body>
-    <h1>Hei, i'm a big heading</h1>
-    <p>hey i'm a paragrapg</p>
-    <a href="https://google.com" target="_blank" title="Let's go to google">
-      This is a link!</a
-    >
+    <!--Header element-->
+    <header>
+      <img src="img/Deadpoolsquare.jpeg" alt="" />
+      <h1>Deadpool</h1>
+    </header>
+    <!-- Main element -->
+    <main>
+      <h2>About Deadpool</h2>
+      <p>Deadpool is awesome. He is a marvel superhero and a savage</p>
+      <img src="/img/Deadpool-main.jpg" alt="Deadpool" />
+      <p>Deadpool and his gun</p>
+      <h2>Characteristics</h2>
+      <ol>
+        <li>He cant die</li>
+        <li>he's pretty badass</li>
+        <li>He's red and black</li>
+      </ol>
+      <h2>Deadpool's gun</h2>
+      <p>deadpool has a nice gun. Click the links to see it</p>
+      <ul>
+        <li>
+          <a target="_blank" href="https://no.wikipedia.org/wiki/Deadpool"
+            >Deadpool</a
+          >
+        </li>
+        <li>
+          <a target="_blank" href="https://no.wikipedia.org/wiki/Supermann"
+            >Superman</a
+          >
+        </li>
+        <li>
+          <a target="_blank" href="https://no.wikipedia.org/wiki/Iron_Man_2"
+            >Iron Man</a
+          >
+        </li>
+      </ul>
+    </main>
+
+    <!-- Footer Element -->
+    <footer>
+      <p>This site is created by Andreas Torgersen &copy;</p>
+    </footer>
   </body>
 </html>
