Wrote css for character website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="img/Deadpoolsquare.jpeg" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Marvel&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Deadpool</title>
   </head>
   <body>
@@ -17,7 +24,7 @@
       <h2>About Deadpool</h2>
       <p>Deadpool is awesome. He is a marvel superhero and a savage</p>
       <img src="/img/Deadpool-main.jpg" alt="Deadpool" />
-      <p>Deadpool and his gun</p>
+      <p class="caption">Deadpool and his gun</p>
       <h2>Characteristics</h2>
       <ol>
         <li>He cant die</li>
@@ -25,7 +32,7 @@
         <li>He's red and black</li>
       </ol>
       <h2>Deadpool's gun</h2>
-      <p>deadpool has a nice gun. Click the links to see it</p>
+      <p>Deadpool has a nice gun. Click the links to see it</p>
       <ul>
         <li>
           <a target="_blank" href="https://no.wikipedia.org/wiki/Deadpool"
